--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "child_process": "^1.0.2",
     "express": "^4.16.4",
     "http": "0.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "newsapi": "^2.4.0",
     "next": "^7.0.2",
+    "node-cron": "^2.0.3",
     "nodemon": "^1.18.8",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
