--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server",
+    "dev": "nodemon server.js",
     "build": "next build",
     "start": "SET NODE_ENV=production node server.js"
   },
@@ -19,10 +19,13 @@
     "newsapi": "^2.4.0",
     "next": "^7.0.2",
     "node-cron": "^2.0.3",
-    "nodemon": "^1.18.8",
+    "nodemon": "^1.18.9",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
+  },
+  "devDependencies": {
+    "chalk": "^2.4.1"
   }
 }
